--- a/synergy-landing/thank-you.html
+++ b/synergy-landing/thank-you.html
@@ -31,7 +31,7 @@
         <div class="row">
           <div class="large-5 medium-6 small-10 small-centered medium-centered large-centered  panel columns">
             <h1>Thank You!</h1>
-            <h2 class="text-center">You'll hear from us soon.</h2>
+            <h2 class="text-center">You'll hear from us soon, ok?</h2>
             <p class="text-center button"><a href="/index.html">Back to Home &raquo;</a></p>
             <div class="copyright text-center">&copy; Acme 2013</div>
           </div>
